cleanup & start on ranking script

--- a/rankings/index.html
+++ b/rankings/index.html
@@ -1,6 +1,9 @@
 ---
 extra_css:
   - /rankings/style.css
+extra_js:
+  - /src/tabletop.js
+  - /src/rankings.js
 ---
 
 {% assign rankings = site.data.PlayerRankings %}
