added jumbotron and navbar

--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 ---
 ---
 
-<iframe width="640" height="360" src="https://www.youtube.com/embed/5mPyCW9A_3U" frameborder="0" allowfullscreen></iframe>
+<div class="jumbotron">
+	<div class="background">
+		<div class="caption"><p>Club Shenanigans</p></div>
+	</div>
+
+</div>
+
+<div class="page-content">
+	<div class="wrapper">
+		<div class="stream-window">
+			<iframe width="640" height="360" src="https://www.youtube.com/embed/5mPyCW9A_3U" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</div>
+</div>
