update ladder page

--- a/ssb4/ladder/index.html
+++ b/ssb4/ladder/index.html
@@ -1,19 +1,20 @@
 ---
 extra_css:
-  - /rankings/style.css
+  - /ssb4/ladder/style.css
 extra_js:
   - /src/tabletop.js
-  - /src/rankings.js
+  - /src/ladder.js
 ---
 
 <div class="page-content">
 	<div class="wrapper">
+
 		<div class="player-ranks">
 
 			<h2 class="title">Player Rankings 2016</h2>
 			<h3 class="subtitle">Super Smash Bros. 4</h3>
 
-			<ul></ul> <!-- player rankings inserted here -->
+			<ul class="ladder-rankings"></ul> <!-- player rankings inserted here -->
 
 		</div>
 	</div>
