changed home page style

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 ---
 
 <div class="jumbotron">
-	<div class="background">
-		<div class="caption"><p>Club Shenanigans</p></div>
+	<div
+		class="background"
+		data-start="background-position-y: 0px;"
+		data-550-start="background-position-y: -300px;"
+	>
+		<div class="caption-container"><div class="caption"></div></div>
 	</div>
 
 </div>
