--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 ---
 ---
 
-<div class="jumbotron">
-	<div
-		class="background"
-		data-start="background-position-y: 0px;"
-		data-550-start="background-position-y: -300px;"
-	>
-		<div class="caption-container"><div class="caption"></div></div>
+<section id="top"
+	data-start="height: 500px;"
+	data-500-start="height: 60px;"
+>
+	<div class="jumbotron jt--home">
+		<div
+			class="background"
+			data-start="background-position-y: 0px;"
+			data-8000-start="background-position-y: -800px;"
+		>
+			<div class="caption-container"><div class="caption"></div></div>
+		</div>
 	</div>
+</section>
 
-</div>
 
-<div class="page-content">
+<section id="content"
+	data-start="padding-top: 550px;"
+	data-500-start="padding-top: 610px;"
+>
 	<div class="wrapper">
 		<div class="stream-window">
 			<iframe width="640" height="360" src="https://www.youtube.com/embed/5mPyCW9A_3U" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
-</div>
+</section>
