content and style changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ---
+extra_js:
+  - /src/ladder.js
+  - /src/firebase.js
 ---
 
 <section id="top"
@@ -22,8 +25,7 @@
 	data-500-start="padding-top: 610px;"
 >
 	<div class="wrapper">
-		<div class="stream-window">
-			<iframe width="640" height="360" src="https://www.youtube.com/embed/5mPyCW9A_3U" frameborder="0" allowfullscreen></iframe>
-		</div>
+		<div class="match-list-title">Recent Matches</div>
+		<div class="match-list"></div>
 	</div>
 </section>
