Removed all ranking-related javascript and revised CSS

--- a/ladder/ssb4/index.html
+++ b/ladder/ssb4/index.html
@@ -3,13 +3,11 @@ extra_css:
   - /ladder/ssb4/style.css
 extra_js:
   - /src/tabletop.js
-  - /src/ladder.js
-  - /src/firebase.js
 ---
 
 <section id="top"
-	data-start="height: 300px;"
-	data-100-start="height: 60px;"
+	data-start="height: 500px;"
+	data-300-start="height: 60px;"
 >
 	<div class="jumbotron jt--ssb4">
 		<div
@@ -23,8 +21,8 @@ extra_js:
 </section>
 
 <section id="content"
-	data-start="padding-top: 350px;"
-	data-100-start="padding-top: 210px;"
+	data-start="padding-top: 450px;"
+	data-300-start="padding-top: 210px;"
 >
 	<div class="wrapper">
 		<div class="column--left">
@@ -53,9 +51,8 @@ extra_js:
 	</div>
 </section>
 
-<section id="ladder">
+<!-- <section id="ladder">
 	<div class="wrapper">
-		<!-- player rankings inserted here -->
 		<ul class="ladder--rankings"></ul>
 	</div>
-</section>
+</section> -->
