--- a/rankings/index.html
+++ b/rankings/index.html
@@ -10,15 +10,15 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-	
-		<link rel="stylesheet" href="/rankings/style.css">
-	
 
-	
+		<link rel="stylesheet" href="/rankings/style.css">
+
+
+
 		<script type="text/javascript" src="/src/tabletop.js"></script>
-	
+
 		<script type="text/javascript" src="/src/rankings.js"></script>
-	
+
 
 </head>
 
@@ -46,22 +46,16 @@
 
     <div class="page-content">
 	<div class="wrapper">
-		<div class="player-ranks">
+		<!-- <div class="player-ranks">
 
 			<h2 class="title">Player Rankings 2016</h2>
 			<h3 class="subtitle">Super Smash Bros. 4</h3>
 
-			<ul></ul> <!-- player rankings inserted here -->
+			<ul></ul> player rankings inserted here
 
-		</div>
+		</div> -->
 	</div>
 </div>
-
-
-    <footer class="site-footer">
-
-</footer>
-
 
   </body>
 
