Update Ladder page

--- a/ladder/ssb4/index.html
+++ b/ladder/ssb4/index.html
@@ -7,13 +7,13 @@ extra_js:
 
 <section id="top"
 	data-start="height: 500px;"
-	data-300-start="height: 60px;"
+	data-100-start="height: 60px;"
 >
 	<div class="jumbotron jt--ssb4">
 		<div
 			class="background"
 			data-start="background-position-y: 0px;"
-			data-end="background-position-y: -500px;"
+			data-100-start="background-position-y: -100px;"
 		>
 			<div class="caption-container"><div class="caption"></div></div>
 		</div>
@@ -22,31 +22,113 @@ extra_js:
 
 <section id="content"
 	data-start="padding-top: 450px;"
-	data-300-start="padding-top: 210px;"
+	data-100-start="padding-top: 210px;"
 >
 	<div class="wrapper">
-		<div class="column--left">
+		<!-- <div class="column--left">
 			<img src="/tier-cards.png" alt="">
-		</div>
+		</div> -->
 		<div class="column--right">
+            <h1>Tournament Rules</h1>
+            <p>
+                The Shen Ladder Tournament ranks players based on matches over the course of the semester. In contrast to a traditional tournament,
+                a ladder tournament allows players to choose who they're going to challenge. The more skilled the player, the more your rank will rise.
+            </p>
+            <p>
+                This tournament is Elo-based, but additional systems have been made to ensure players climb the ranks relatively easily.
+            </p>
+            <p>
+                This tournament will run from <strong>Feburary 8, 2017</strong> to <strong>May 17, 2017</strong>.
+                All ladder matches will take place in the Student Lounge at Leeward Community College every week on Wednesday and Thursday
+                between the times of <strong>10:00 - 12:00 PM</strong> and <strong>2:00 - 4:00 PM</strong>.
+            </p>
+			<h2>How to Register</h2>
+			<p>
+                The entrance fee for the Ladder is <strong>$5.00</strong> and is one-time for the entire semester.
+                There will also be three division-based traditional tournaments, which will have separate entrance fees.
+            </p>
+            <p>
+                In addition, all registrants for this tournament need to meet the following requirements:
+                <ul>
+                    <li>Be a registered University of Hawaii student</li>
+                    <li>Be a registered member of Club Shenanigans</li>
+                </ul>
+                Having an account on the Club Shenanigans Discord server is also highly recommended if you want the latest updates on your current statistics and rank.
+			</p>
 			<h2>How it Works</h2>
 			<p>
-				<strong>Ranks</strong> are based off how high your <strong>Rating</strong> is. Your <strong>Rating</strong> is a numerical value representing your skill.
-				The ladder is separated into <strong>Tiers</strong> that group together players with similar <strong>Ratings</strong>: S, A, B, and C.
-				The higher your <strong>Tier</strong> is, the faster your <strong>Rating</strong> will change after playing matches.
-			</p>
-			<h2>Rewards</h2>
-			<ul>
-				<li>The Top-5 players on the ladder will be given free entry to any tournament hosted by the Club.</li>
-				<li>The player in 1st place will be given custom art of their main character.</li>
-			</ul>
-			<h2>How to Enter</h2>
-			<p>
-				The price for entry is $5. You may pay this amount to a Club Official.
-				Note that only registered Leeward Community College students may enter.
+                In a Ladder Tournament, your rank is based off your <strong>skill rating</strong>, which is a number that represents your skill.
+            </p>
+            <p>
+                The ranks for all players will be updated and posted as much as possible.
+            </p>
+            <p>
+                Your goal during this tournament is to raise your skill level as much as possible by challenging players and winning matches.
+                The rate of which your skill level rises depends on how strong the player you challenge is.
+            </p>
+            <p>
+                In addition, if you finished three (3) matches, you will be assigned a division at the beginning of the next week.
+                This division will represent your skill group among all the other players.
+                There are four divisions: <strong>C, B, A, and S</strong>.
+            <p>
+            <h2>Prizes</h2>
+            <p>
+                <ul>
+                    <li>Players who have been promoted to a higher division at the beginning of the week will be given a <strong>Division Card</strong>, a physical card that represents their division.</li>
+                    <li>Players who show improvement in the form of a rising skill rating will have special recognition on our website and will be given a hand-drawn character icon to use online and on our website.</li>
+                </ul>
+                Other prizes are to be announced.
+            </p>
+			<h2>Challenging Players &amp; Scheduling Matches</h2>
+            <p>
+                On each ladder match day (Wednesday and Thursday), every match will be organized in 12 time-slots, 6 being between 10:00 AM - 12:00 PM and
+                the other 6 being between 2:00 PM - 4:00 PM. A physical form will be avaliable on these days in which you can schedule your match. The same form will be used to report the results of the match as well.
+            </p>
+            <p>
+                <a href="https://docs.google.com/document/d/1Qtssmz-o-aGGuqzXgT5BZPej32_F1B-oKdfrrb8318I/edit?usp=sharing">An example of what the schedule form looks like</a>
+            </p>
+            <p>
+                The general rule is that <strong>you can challenge any player as long as they registered in the tournament</strong>, but there are a few restrictions:
+                <ol>
+                    <li>Players may not challenge other players in a division below their own. <strong>If you have no division, this rule does not apply.</strong> Players who are in a division are allowed to challenge those who aren't.</li>
+                    <li>Players may not challenge the same player multiple times in one day.</li>
+                    <li>Players who already have a match scheduled may not challenge any other players until that match is over.</li>
+                    <li>Players may only challenge up to three (3) times per day. This does not apply to other players challenging you.</li>
+                    <li>Byes (missing scheduled matches) will count as a <strong>win by default</strong> for the player that is present. If both players are missing, it will be treated as a loss for both players' records.</li>
+                </ol>
+            </p>
+            <h2>In-game Rules</h2>
+            <p>
+                Each ladder match should follow traditional tournament match rules. Ladder matches are played in a best of <strong>3 rounds</strong>. If the match involves two players in <strong>Division S</strong>,
+                then it will be played in a best of <strong>5 rounds</strong>.
+            </p>
+            <p>
+                Game Rules:
+                <ul>
+                    <li>Stock Battle (2 stocks)</li>
+                    <li>No Items</li>
+                    <li>6:00 Minute Timer</li>
+                </ul>
 
-				New entrants will be given a neutral skill rating. Their rating on the website will be shown after their first three matches.
-			</p>
+                Legal Stages:
+                <ul>
+                    <li>Final Destination</li>
+                    <li>Battlefield</li>
+                    <li>Smashville</li>
+                    <li>Town and City</li>
+                </ul>
+
+                During the first round, only starter stages can be chosen. The <strong>Defending Player</strong> (the player who was challenged) picks the first stage, and
+                the loser of that round can then pick the stage for the next round, and so on.
+            <p>
+            <h2>Divisional Tournaments</h2>
+            <p>
+                As a compliment to the ladder tournament, Divisional Tournaments will also be hosted throughout the semester. These tournaments will be run like a traditional elimination tournament,
+                except it will be split into high and low brackets based on your division as to give players of all skill levels a chance at winning. NOTE: Players with <strong>no division</strong> won't be able to enter.
+            </p>
+            <p>
+                In addition, all matches that take place during a Divisional Tournament will double as ladder matches in the Ladder Tournament with a boost in rating change.
+            </p>
 		</div>
 	</div>
 </section>
