Update Ladder page

--- a/ladder/ssb4/index.html
+++ b/ladder/ssb4/index.html
@@ -55,27 +55,29 @@ extra_js:
                 </ul>
                 Having an account on the Club Shenanigans Discord server is also highly recommended if you want the latest updates on your current statistics and rank.
 			</p>
+            <p>
+                <a href="https://goo.gl/forms/ngzt5mnxydYsSeqt1">Online Registration Form</a>
+            </p>
 			<h2>How it Works</h2>
 			<p>
-                In a Ladder Tournament, your rank is based off your <strong>skill rating</strong>, which is a number that represents your skill.
+                In a Ladder Tournament, your rank is based off your <strong>skill rating</strong>, which is a number that represents your skill. Players of similar skill ratings will
+                also be put into <strong>divisions</strong> which represent your general skill group. Your division could be <strong>C, B, A, or S</strong>.
             </p>
             <p>
-                The ranks for all players will be updated and posted as much as possible.
+                While your skill rating and rank will be updated and posted as often as possible, your division will only update <strong>once at the beginning of every week</strong>.
             </p>
             <p>
                 Your goal during this tournament is to raise your skill level as much as possible by challenging players and winning matches.
                 The rate of which your skill level rises depends on how strong the player you challenge is.
             </p>
             <p>
-                In addition, if you finished three (3) matches, you will be assigned a division at the beginning of the next week.
-                This division will represent your skill group among all the other players.
-                There are four divisions: <strong>C, B, A, and S</strong>.
-            <p>
+                New players will be <strong>unranked</strong> and will have to play at least three (3) matches for their division to be decided.
+            </p>
             <h2>Prizes</h2>
             <p>
                 <ul>
                     <li>Players who have been promoted to a higher division at the beginning of the week will be given a <strong>Division Card</strong>, a physical card that represents their division.</li>
-                    <li>Players who show improvement in the form of a rising skill rating will have special recognition on our website and will be given a hand-drawn character icon to use online and on our website.</li>
+                    <li>Players who show improvement in the form of a rising skill rating will have special recognition on our website and will be given a hand-drawn character icon to use online and on the rankings.</li>
                 </ul>
                 Other prizes are to be announced.
             </p>
@@ -88,9 +90,9 @@ extra_js:
                 <a href="https://docs.google.com/document/d/1Qtssmz-o-aGGuqzXgT5BZPej32_F1B-oKdfrrb8318I/edit?usp=sharing">An example of what the schedule form looks like</a>
             </p>
             <p>
-                The general rule is that <strong>you can challenge any player as long as they registered in the tournament</strong>, but there are a few restrictions:
+                The general rule is that <strong>you can challenge any player as long as they are of equal or higher division</strong>, but there are a few restrictions:
                 <ol>
-                    <li>Players may not challenge other players in a division below their own. <strong>If you have no division, this rule does not apply.</strong> Players who are in a division are allowed to challenge those who aren't.</li>
+                    <li>Players may not challenge other players in a division below your own. <strong>If you have no division, this rule does not apply.</strong> Players who are in a division are allowed to challenge those who aren't.</li>
                     <li>Players may not challenge the same player multiple times in one day.</li>
                     <li>Players who already have a match scheduled may not challenge any other players until that match is over.</li>
                     <li>Players may only challenge up to three (3) times per day. This does not apply to other players challenging you.</li>
