Attempt to fix mobile scrolling again

--- a/rankings/index.html
+++ b/rankings/index.html
@@ -23,40 +23,41 @@
 </head>
 
 
-  <body id="skrollr-body">
+<body>
+    <div id="skrollr-body">
+        <div class="page-header">
 
-    <div class="page-header">
+        	<div class="wrapper">
 
-	<div class="wrapper">
+        		<div><a class="logo" href="/"></a></div>
+        		<div class="title">club shen</div>
 
-		<div><a class="logo" href="/"></a></div>
-		<div class="title">club shen</div>
+        		<div class="navbar">
+        			<ul>
+        				<li class="navbar-item"><a href="trello/"><i class="fa fa-trello"></i></a></li>
+        				<li class="navbar-item"><a href="slack/"><i class="fa fa-slack"></i></a></li>
+        			</ul>
+        		</div>
 
-		<div class="navbar">
-			<ul>
-				<li class="navbar-item"><a href="trello/"><i class="fa fa-trello"></i></a></li>
-				<li class="navbar-item"><a href="slack/"><i class="fa fa-slack"></i></a></li>
-			</ul>
-		</div>
+        	</div>
 
-	</div>
+        </div>
 
-</div>
+        <div class="page-content">
+        	<div class="wrapper">
+        		<!-- <div class="player-ranks">
 
+        			<h2 class="title">Player Rankings 2016</h2>
+        			<h3 class="subtitle">Super Smash Bros. 4</h3>
 
-    <div class="page-content">
-	<div class="wrapper">
-		<!-- <div class="player-ranks">
+        			<ul></ul> player rankings inserted here
 
-			<h2 class="title">Player Rankings 2016</h2>
-			<h3 class="subtitle">Super Smash Bros. 4</h3>
+        		</div> -->
+        	</div>
+        </div>
 
-			<ul></ul> player rankings inserted here
+    </div>
 
-		</div> -->
-	</div>
-</div>
-
-  </body>
+</body>
 
 </html>
