Attempt to fix mobile scrolling again, again

--- a/rankings/index.html
+++ b/rankings/index.html
@@ -24,7 +24,6 @@
 
 
 <body>
-    <div id="skrollr-body">
         <div class="page-header">
 
         	<div class="wrapper">
@@ -43,7 +42,7 @@
 
         </div>
 
-        <div class="page-content">
+        <div class="page-content" id="skrollr-body">
         	<div class="wrapper">
         		<!-- <div class="player-ranks">
 
